# android-test

./: .bazelproject  .bazelrc  .gitignore  Android X SECURITY.md  BUILD  BUILD.bazel  CHANGELOG_TEMPLATE.md  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  MODULE.bazel  README.md  SECURITY.live  TEMPLATE.md  WORKSPACE  WORKSPACE.bzlmod  _config.yml  bazel-android-test  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  build_and_install.sh  cloudbuild.yaml  contribute.md  downloads.md  index.md  piper-internal.patch  proguard_binary.cfg  release_notes.md  repo.bzl  samples.md  server.java  support.md  update-maven-local-repository.sh  update-piper-internal-patch.sh
annotation/: BUILD  BUILD.bazel  CHANGELOG.md  LICENSE
annotation/java/androidx/test/annotation/: AndroidManifest.xml  BUILD  BUILD.bazel  ExperimentalTestApi.java  InternalTestApi.java  Stub.java
build_extensions/: AndroidManifest_instrumentation_test_template.xml  AndroidManifest_instrumentation_test_template_copy.xml  AndroidManifest_robolectric.xml  AndroidManifest_target_stub.xml  BUILD  BUILD.bazel  add_or_update_file_in_zip.bzl  android_app_instrumentation_tests.bzl  android_app_instrumentation_tests.bzl.opensource  android_application_test.bzl  android_library_instrumentation_tests.bzl  android_library_local_tests.bzl  android_library_local_tests.bzl.opensource  android_library_slim_test.bzl  android_library_test.bzl  android_multidevice_instrumentation_test.bzl  api_checks.bzl  atslToAxtJarJarRules.txt  atsl_to_axt_jarjar.bzl  axt_android_aar.bzl  axt_android_application_test.bzl  axt_android_local_test.bzl  axt_deps_versions.bzl  axt_maven_apk.bzl  axt_released_versions.bzl  axt_stable_versions.bzl  axt_versions.bzl  combine_jars.bzl  create_jar.bzl  dackka_test.bzl  derive_test_class.bzl  derive_test_class_test.bzl  droiddoc.bzl  droiddoc.sh  generate_instrumentation_test.bzl  generate_instrumentation_tests.bzl  infer_android_package_name.bzl  jarjar.bzl  java_service_map.bzl  jetify.bzl  (+16 more)
build_extensions/jar_validator/: BUILD
build_extensions/maven/: BUILD  add_or_update_file_in_zip.bzl  axt_android_aar.bzl  axt_maven_apk.bzl  combine_jars.bzl  copy_file.bzl  jarjar.bzl  kotlin_info.bzl  maven_artifact.bzl  maven_artifact.sh  maven_info.bzl  maven_registry.bzl  maven_repo.bzl  maven_repository.py  reduce_jar.bzl
core/: BUILD  BUILD.bazel  CHANGELOG.md
core/java/androidx/test/core/: AndroidManifest.xml  AndroidManifest_release.xml  BUILD  BUILD.bazel
core/java/androidx/test/screenshot/: BUILD  BitmapHolder.kt
core/javatests/androidx/test/core/: AndroidManifest_target.xml  BUILD.bazel
core/javatests/androidx/test/screenshot/: BUILD  BitmapHolderTest.kt
espresso/core/: BUILD  BUILD.bazel
espresso/device/: BUILD  BUILD.bazel  CHANGELOG.md
ext/junit/: BUILD  BUILD.bazel  CHANGELOG.md
ext/truth/: BUILD  BUILD.bazel  CHANGELOG.md
opensource/auto_value/: BUILD.bazel
opensource/dagger/: BUILD  BUILD.bazel
opensource/jarjar/: BUILD.bazel
opensource/java_lib/: BUILD.bazel
runner/android_junit_runner/: BUILD  BUILD.bazel  CHANGELOG.md
runner/android_junit_runner/java/androidx/test/: AndroidManifest.xml  BUILD  BUILD.bazel  consumer_proguard_specs.cfg  proguard_library.cfg  proguard_specs.cfg  release_jarjar_rules.txt
runner/android_junit_runner/javatests/androidx/test/: AndroidManifest.xml  AndroidManifest_opensource.xml  AndroidManifest_opensource_stub.xml  BUILD  BUILD.bazel  FailureAssumptionTest.java  JUnit3HogTest.java  JUnit4CategoryTest.java  JUnit4HogTest.java  JUnitTestSuiteTest.java  MyAndroidTestCase.java  MyEmptyTest.java  MyInstrumentationTestCase.java  MyParameterizedTest.java  MyTestSuiteBuilder.java  ParameterizedWithCommaTest.java  ParameterizedWithHashTest.java  SimpleTest.java  TheoriesAndTestsTogether.java  TimeoutTest.java  build_defs.bzl
runner/android_test_orchestrator/: BUILD  BUILD.bazel  CHANGELOG.md  Orchestrator.blueprint
runner/android_test_orchestrator/stubapp/: BUILD  BUILD.bazel  proguard_binary.cfg
runner/android_test_orchestrator/stubapp/src/: AndroidManifest.xml
runner/monitor/: BUILD  BUILD.bazel  CHANGELOG.md
runner/monitor/java/androidx/test/: AndroidManifest.xml  BUILD  BUILD.bazel  InstrumentationRegistry.java  consumer_proguard_specs.cfg  jarjar.txt  proguard_library.cfg
runner/monitor/javatests/androidx/test/: AndroidManifest.xml  AndroidManifest_opensource_stub.xml  BUILD  BUILD.bazel  InstrumentationRegistryTest.java
runner/rules/: BUILD  BUILD.bazel  CHANGELOG.md
runner/rules/java/androidx/test/: AndroidManifest.xml  BUILD  BUILD.bazel  consumer_proguard_specs.cfg
services/: AndroidManifest.xml  BUILD  BUILD.bazel  CHANGELOG.md  proguard_library.cfg
services/shellexecutor/: BUILD  BUILD.bazel
services/speakeasy/: README.md
services/storage/: BUILD  BUILD.bazel
tools/android/emulated_devices/droid_razr/: BUILD.bazel
tools/android/emulated_devices/galaxy_nexus/: BUILD.bazel
tools/android/emulated_devices/galaxy_s_iii/: BUILD.bazel
tools/android/emulated_devices/generic_go_phone/: BUILD  BUILD.bazel
tools/android/emulated_devices/generic_tablet/: BUILD  BUILD.bazel
tools/android/emulated_devices/generic_watch/: BUILD  BUILD.bazel
tools/android/emulated_devices/high_mem_watch/: BUILD.bazel
tools/android/emulator/: BUILD  BUILD.bazel  common.py  common_subprocess_test.py  common_test.py  emulated_device.py  emulated_device_integration_test_arm.py  emulated_device_software_open_gl_integration_test.py  emulated_device_test.py  emulator_meta_data.proto  emulator_meta_data_pb2.py  fake_android_platform_util.py  gflags.BUILD  leakr.dic  protobuf.BUILD  reporting.py  resources.py  resources_test.py  stopwatch.py  unified_launcher.bzl  unified_launcher.py  unified_launcher_test.py  xres.py  xserver.py  xserver_test.py
tools/android/emulator/daemon/: README.txt  bootstrap.apk
tools/android/emulator/support/: adb.turbo  default_sdcard.256.img
tools/android/emulator/toolchains/: BUILD.bazel  toolchain.bzl
tools/device_broker/proto/: BUILD  BUILD.bazel  test_info.proto
(+2647 files in other folders)
