package(default_visibility = ["//:__subpackages__"])

load("//build_extensions:maven_repo.bzl", "maven_repository")
load("@rules_jvm_external//:defs.bzl", "artifact")

exports_files([
    "proguard_binary.cfg",
    "LICENSE",
    "repo.bzl",
])

# Creates maven release repository
maven_repository(
    name = "axt_m2repository",
    srcs = [
        "//core/java/androidx/test/core:core_maven_artifact",
        "//espresso/accessibility/java/androidx/test/espresso/accessibility:accessibility_checks_maven_artifact",
        "//espresso/contrib/java/androidx/test/espresso/contrib:espresso_contrib_maven_artifact",
        "//espresso/core/java/androidx/test/espresso:espresso_core_maven_artifact",
        "//espresso/core/java/androidx/test/espresso/remote:espresso_remote_maven_artifact",
        "//espresso/idling_resource/concurrent/java/androidx/test/espresso/idling/concurrent:idling_concurrent_maven_artifact",
        "//espresso/idling_resource/java/androidx/test/espresso:espresso_idling_resource_maven_artifact",
        "//espresso/idling_resource/net/java/androidx/test/espresso/idling/net:idling_net_maven_artifact",
        "//espresso/intents/java/androidx/test/espresso/intent:espresso_intents_maven_artifact",
        "//espresso/web/java/androidx/test/espresso/web:espresso_web_maven_artifact",
        "//ext/junit/java/androidx/test/ext/junit:junit_maven_artifact",
        "//ext/truth/java/androidx/test/ext/truth:truth_maven_artifact",
        "//ktx/core/java/androidx/test/core:core_maven_artifact",
        "//ktx/ext/junit/java/androidx/test/ext/junit:junit_maven_artifact",
        "//runner/android_junit_runner/java/androidx/test:runner_maven_artifact",
        "//runner/android_test_orchestrator/stubapp:orchestrator_release_maven_artifact",
        "//runner/monitor/java/androidx/test:monitor_maven_artifact",
        "//runner/rules/java/androidx/test:rules_maven_artifact",
        "//services:test_services_maven_artifact",
        "//services/storage/java/androidx/test/services/storage:test_storage_maven_artifact",
    ],
)

java_test(
    name = "instrumentation_test_runner",
    testonly = 1,
    tags = ["manual"],
    test_class = "com.google.android.apps.common.testing.suite.AndroidDeviceTestSuite",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//opensource:entry_point_import",
    ],
)

alias(
    name = "third_party/java/jdk/jar",
    actual = "@local_jdk//:jar",
)

# Support library aliases

alias(
    name = "androidx_appcompat",
    actual = artifact("androidx.appcompat:appcompat"),
)

alias(
    name = "google_android_material",
    actual = artifact("com.google.android.material:material"),
)

alias(
    name = "androidx_multidex",
    actual = artifact("androidx.multidex:multidex"),
)

alias(
    name = "androidx_annotation",
    actual = artifact("androidx.annotation:annotation"),
)

alias(
    name = "androidx_lifecycle_common",
    actual = artifact("androidx.lifecycle:lifecycle-common"),
)

alias(
    name = "androidx_core",
    actual = artifact("androidx.core:core"),
)

alias(
    name = "androidx_legacy_support_core_ui",
    actual = artifact("androidx.legacy:legacy-support-core-ui"),
)

alias(
    name = "androidx_legacy_support_core_utils",
    actual = artifact("androidx.legacy:legacy-support-core-utils"),
)

alias(
    name = "androidx_fragment",
    actual = artifact("androidx.fragment:fragment"),
)

alias(
    name = "androidx_legacy_support_v4",
    actual = artifact("androidx.legacy:legacy-support-v4"),
)

alias(
    name = "androidx_recyclerview",
    actual = artifact("androidx.recyclerview:recyclerview"),
)

alias(
    name = "androidx_viewpager",
    actual = artifact("androidx.viewpager:viewpager"),
)

alias(
    name = "androidx_drawerlayout",
    actual = artifact("androidx.drawerlayout:drawerlayout"),
)

alias(
    name = "androidx_cursoradapter",
    actual = artifact("androidx.cursoradapter:cursoradapter"),
)

alias(
    name = "uiautomator",
    actual = artifact("androidx.test.uiautomator:uiautomator"),
)
