module(name = "android_test_support")

bazel_dep(name = "rules_android", version = "0.5.1")
bazel_dep(name = "rules_java", version = "7.12.1")
bazel_dep(name = "rules_jvm_external", version = "6.4")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_kotlin", version = "2.0.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_robolectric", version = "4.13")
bazel_dep(name = "grpc-java", version = "1.66.0")
bazel_dep(name = "abseil-py", version = "2.1.0")

# These need to be consistent with their counterparts in build_extensions/axt_deps_versions.bzl.
KOTLIN_VERSION = "1.8.20"
KOTLINX_COROUTINES_VERSION = "1.7.1" 
GRPC_VERSION = "1.66.0"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

load(
    "//build_extensions:axt_deps_versions.bzl",
    "ANDROIDX_ANNOTATION_EXPERIMENTAL_VERSION",
    "ANDROIDX_ANNOTATION_VERSION",
    "ANDROIDX_COMPAT_VERSION",
    "ANDROIDX_CONCURRENT_VERSION",
    "ANDROIDX_CORE_VERSION",
    "ANDROIDX_CURSOR_ADAPTER_VERSION",
    "ANDROIDX_DRAWER_LAYOUT_VERSION",
    "ANDROIDX_FRAGMENT_VERSION",
    "ANDROIDX_LEGACY_SUPPORT_VERSION",
    "ANDROIDX_LIFECYCLE_VERSION",
    "ANDROIDX_MULTIDEX_VERSION",
    "ANDROIDX_RECYCLERVIEW_VERSION",
    "ANDROIDX_TRACING_VERSION",
    "ANDROIDX_VIEWPAGER_VERSION",
    "ANDROIDX_WINDOW_VERSION",
    "GOOGLE_MATERIAL_VERSION",
    "GUAVA_LISTENABLEFUTURE_VERSION",
    "GUAVA_VERSION",
    "JUNIT_VERSION",
    "UIAUTOMATOR_VERSION",
    "ATF_VERSION"
)

maven.install(
    name = "maven",
    artifacts = [
        "androidx.annotation:annotation:" + ANDROIDX_ANNOTATION_VERSION,
        "androidx.annotation:annotation-experimental:jar:" + ANDROIDX_ANNOTATION_EXPERIMENTAL_VERSION,
        "androidx.appcompat:appcompat:" + ANDROIDX_COMPAT_VERSION,
        "androidx.concurrent:concurrent-futures:" + ANDROIDX_CONCURRENT_VERSION,
        "androidx.concurrent:concurrent-futures-ktx:" + ANDROIDX_CONCURRENT_VERSION,
        "androidx.core:core:" + ANDROIDX_CORE_VERSION,
        "androidx.cursoradapter:cursoradapter:" + ANDROIDX_CURSOR_ADAPTER_VERSION,
        "androidx.drawerlayout:drawerlayout:" + ANDROIDX_DRAWER_LAYOUT_VERSION,
        "androidx.fragment:fragment:" + ANDROIDX_FRAGMENT_VERSION,
        "androidx.legacy:legacy-support-core-ui:" + ANDROIDX_LEGACY_SUPPORT_VERSION,
        "androidx.legacy:legacy-support-core-utils:" + ANDROIDX_LEGACY_SUPPORT_VERSION,
        "androidx.legacy:legacy-support-v4:" + ANDROIDX_LEGACY_SUPPORT_VERSION,
        "androidx.lifecycle:lifecycle-common:" + ANDROIDX_LIFECYCLE_VERSION,
        "androidx.multidex:multidex:" + ANDROIDX_MULTIDEX_VERSION,
        "androidx.recyclerview:recyclerview:" + ANDROIDX_RECYCLERVIEW_VERSION,
        "androidx.tracing:tracing:" + ANDROIDX_TRACING_VERSION,
        "androidx.test.uiautomator:uiautomator:" + UIAUTOMATOR_VERSION,
        "androidx.viewpager:viewpager:" + ANDROIDX_VIEWPAGER_VERSION,
        "androidx.window:window:" + ANDROIDX_WINDOW_VERSION,
        "androidx.window:window-java:" + ANDROIDX_WINDOW_VERSION,
        "androidx.window:window-core:" + ANDROIDX_WINDOW_VERSION,
        "aopalliance:aopalliance:1.0",
        "com.android.tools.lint:lint-api:30.1.0",
        "com.android.tools.lint:lint-checks:30.1.0",
        "com.beust:jcommander:1.72",
        maven.artifact(
            artifact = "accessibility-test-framework",
            exclusions = [
                # exclude the org.checkerframework dependency since that require
                # java8 compatibility. See b/176926990
                maven.exclusion(
                    artifact = "checker",
                    group = "org.checkerframework",
                ),
                # accessibility-test-framework depends on hamcrest 2.2 which causes 'Using type org.hamcrest.Matcher from an indirect dependency' compile errors
                maven.exclusion(
                    artifact = "hamcrest-core",
                    group = "org.hamcrest",
                ),
                maven.exclusion(
                    artifact = "hamcrest-library",
                    group = "org.hamcrest",
                ),
            ],
            group = "com.google.android.apps.common.testing.accessibility.framework",
            version = ATF_VERSION,
        ),
        "com.google.android.material:material:" + GOOGLE_MATERIAL_VERSION,
        "com.google.auto.value:auto-value:1.5.1",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.8.5",
        "com.google.dagger:dagger-compiler:2.46",
        "com.google.dagger:dagger-producers:2.46",
        "com.google.dagger:dagger:2.46",
        "com.google.errorprone:error_prone_annotations:2.9.0",
        "com.google.errorprone:javac-shaded:9-dev-r4023-3",
        "com.google.flogger:flogger-system-backend:0.4",
        "com.google.flogger:flogger:0.4",
        "com.google.flogger:google-extensions:0.4",
        "com.google.googlejavaformat:google-java-format:1.4",
        "com.google.guava:guava:" + GUAVA_VERSION,
        "com.google.guava:listenablefuture:" + GUAVA_LISTENABLEFUTURE_VERSION,
        "com.google.inject.extensions:guice-multibindings:4.1.0",
        "com.google.inject:guice:4.1.0",
        "com.google.truth:truth:1.0",
        "com.googlecode.jarjar:jarjar:1.3",
        "com.linkedin.dexmaker:dexmaker-mockito:jar:2.28.1",
        "com.linkedin.dexmaker:dexmaker:2.28.1",
        "org.mockito.kotlin:mockito-kotlin:4.1.0",
        "com.squareup:javapoet:1.9.0",
        "io.grpc:grpc-okhttp:1.54.1",
        "io.grpc:grpc-stub:1.54.1",
        "org.apache.tomcat:annotations-api:6.0.53",
        "javax.annotation:javax.annotation-api:1.3.1",
        "javax.inject:javax.inject:1",
        "joda-time:joda-time:2.10.1",
        "junit:junit:" + JUNIT_VERSION,
        "net.bytebuddy:byte-buddy-agent:1.9.10",
        "net.bytebuddy:byte-buddy:1.9.10",
        "net.sf.kxml:kxml2:jar:2.3.0",
        "org.ccil.cowan.tagsoup:tagsoup:1.2.1",
        "org.checkerframework:checker-compat-qual:2.5.5",
        "org.hamcrest:hamcrest-core:1.3",
        "org.hamcrest:hamcrest-library:1.3",
        "org.mockito:mockito-core:2.28.1",
        "org.objenesis:objenesis:2.6",
        "org.pantsbuild:jarjar:1.7.2",
        "org.jetbrains.kotlin:kotlin-stdlib:%s" % KOTLIN_VERSION,
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:%s" % KOTLINX_COROUTINES_VERSION,
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:%s" % KOTLINX_COROUTINES_VERSION,
        "org.jetbrains.kotlinx:kotlinx-coroutines-android:%s" % KOTLINX_COROUTINES_VERSION,
        maven.artifact(
            artifact = "robolectric",
            exclusions = [
                # exclude the com.google.guava dependency since that require
                # java8 compatibility.
                maven.exclusion(
                    artifact = "guava",
                    group = "com.google.guava",
                ),
            ],
            group = "org.robolectric",
            version = "4.13",
        ),
    ],
    fetch_sources = True,
    generate_compat_repositories = True,
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://dl.bintray.com/linkedin/maven",
    ],
)

# need to have a isolated version tree for listenablefuture, because otherwise
# listenablefuture will get resolved to 9999.0-empty-to-avoid-conflict-with-guava
maven.install(
    name = "maven_listenablefuture",
    artifacts = [
        "com.google.guava:listenablefuture:" + GUAVA_LISTENABLEFUTURE_VERSION,
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://dl.bintray.com/linkedin/maven",
    ],
)