# Publicly visible androidx.test.annotation alias
load("//build_extensions:axt_versions.bzl", "ANNOTATION_ARTIFACT")

licenses(["notice"])

android_library(
    name = "annotation",
    tags = [
        "maven_coordinates=%s" % ANNOTATION_ARTIFACT,
    ],
    visibility = ["//visibility:public"],
    exports = ["//annotation/java/androidx/test/annotation"],
)
