# Description:
#   Top level apk for services required for full orchestrated testing.

load("//build_extensions:maven_artifact.bzl", "maven_artifact")
load("//build_extensions:axt_versions.bzl", "SERVICES_APK_ARTIFACT")
load("//build_extensions:axt_maven_apk.bzl", "axt_maven_apk")

licenses(["notice"])

package(
    default_visibility = [
        "//visibility:public",
    ],
)

exports_files(["AndroidManifest.xml"])

# Standard test services that can be installed on any device.
android_binary(
    name = "test_services",
    custom_package = "androidx.test.services",
    licenses = ["permissive"],
    manifest = "AndroidManifest.xml",
    multidex = "legacy",
    proguard_specs = [
        "//:proguard_binary.cfg",
        "proguard_library.cfg",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:androidx_multidex",
        "//services/shellexecutor:exec_server",
        "//services/speakeasy/java/androidx/test/services/speakeasy:protocol",
        "//services/speakeasy/java/androidx/test/services/speakeasy/server",
        "//services/storage/java/androidx/test/services/storage/provider:storage_content_providers",
    ],
)

axt_maven_apk(
    name = "test_services_release_apk",
    artifact = SERVICES_APK_ARTIFACT,
    included_dep = ":test_services",
)

maven_artifact(
    name = "test_services_maven_artifact",
    last_updated = "20191210000000",
    target = ":test_services_release_apk",
)
