# Alias for androidx.test.espresso.core dependency

licenses(["notice"])  # Apache License 2.0

android_library(
    name = "core",
    visibility = ["//visibility:public"],
    exports = ["//espresso/core/java/androidx/test/espresso"],
)

package_group(
    name = "device_api_allowlist",
    packages = [
        "//third_party/android/androidx_test/...",
    ],
)

android_library(
    name = "device",
    testonly = 1,
    visibility = [
        ":device_api_allowlist",
    ],
    exports = ["//third_party/android/androidx_test/espresso/core/java/androidx/test/espresso/device"],
)
