# Publicly visible truth extensions for Android

licenses(["notice"])  # Apache License 2.0

# This needs to be a java_library instead of an alias, so java_* based rules can reference it
java_library(
    name = "truth",
    visibility = ["//visibility:public"],
    exports = ["//ext/truth/java/androidx/test/ext/truth"],
)
