java_plugin(
    name = "auto_value_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = [
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "auto_value",
    neverlink = 1,
    exported_plugins = [":auto_value_plugin"],
    visibility = ["//visibility:public"],
    exports = ["@maven//:com_google_auto_value_auto_value"],
)
