# Description: Jar Jar Links, utility for repackaging Java libraries

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

# Binary target for running jarjar
java_binary(
    name = "jarjar_bin",
    main_class = "com.tonicsystems.jarjar.Main",
    runtime_deps = ["@maven//:org_pantsbuild_jarjar"],
)
