package(default_visibility = ["//visibility:public"])

java_import(
    name = "webbridge",
    jars = [
        "libbridge.jar",
    ],
    deps = [
        # TODO(b/262711775): remove as part of build-from-src exercise
        "@maven//:com_google_guava_guava",
    ],
)

java_import(
    name = "EvaluationAtom",
    jars = [
        "libEvaluationAtom.jar",
    ],
)

java_import(
    name = "WebDriverScripts",
    jars = [
        "libWebDriverScripts.jar",
    ],
)
