# Publicly visible alias to the runner target

licenses(["notice"])  # Apache License 2.0

# This needs to be a java_library instead of an alias, so java_* based rules can reference it
java_library(
    name = "android_junit_runner",
    visibility = ["//visibility:public"],
    exports = ["//runner/android_junit_runner/java/androidx/test:runner"],
)
