# Publicly visible alias to the runner target

licenses(["notice"])  # Apache License 2.0

# This needs to be a android_library so manifests are exported
android_library(
    name = "android_junit_runner",
    visibility = ["//visibility:public"],
    exports = ["//runner/android_junit_runner/java/androidx/test:runner"],
)
