# Publicly visible alias to the AXT rules target
load("//build_extensions:axt_versions.bzl", "RULES_ARTIFACT")

licenses(["notice"])

android_library(
    name = "rules",
    tags = [
        "maven_coordinates=%s" % RULES_ARTIFACT,
    ],
    visibility = ["//visibility:public"],
    exports = ["//runner/rules/java/androidx/test:rules"],
)
